--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daimo/pay": "^1.19.0",
+    "@daimo/pay-common": "^1.19.0",
     "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/react-query": "^5.90.7",
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "viem": "^2.38.6",
+    "wagmi": "^2.19.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
